# Numerical-Computing

./: .gitignore
Analysis/Differentiation/AutoDiff/: autodiff.cpp  autodiff.h
Analysis/Finite Difference/: main.cpp
Analysis/Integration/: composite_simpson.hpp  rect_rule.cpp  romberg.hpp
Analysis/Polynomials/: polynomials.h
Appendix/Conversions/: conversions.hpp
Differentiation/AutoDiff/: autodiff.cpp
Differentiation/Finite Difference/: finite_difference.hpp
Integration/: simpson.hpp  trap_rule.cpp  trapezoidal_refine.hpp
Linear Algebra/Linear Equation Methods/Gauss-Seidel/: gauss_seidel.cpp  gauss_seidel.hpp  main.cpp
Linear Algebra/Linear Equation Methods/Jacobi Method/: Jacobi.cpp  jacobi_solver.hpp
Linear Algebra/Matrix/: Matrix.cpp  Matrix.h  main.cpp
Linear Algebra/R2 vector/: Utils.cpp  Utils.h  Vector2D.cpp  Vector2D.h
Linear Algebra/Tensors/: CMakeLists.txt  main.cpp  tensor_class.hpp  tensor_init.cpp
Optimization/Gradient-Based/Secant method/: main.cpp  secant.cpp
Solvers/Linear Equation Methods/Jacobi Method/: main.cpp
Solvers/Linear Equation Methods/Successive Over-Relaxation/: SOR.cpp
Solvers/Non Linear Equations/: bisection.hpp  newton_raphson.hpp  utils.h
Solvers/Non Linear Equations/Bisection/: bisection.hpp  main.cpp
Solvers/Non Linear Equations/Newton-Raphson/: main.cpp  newton_raphson.hpp
Solvers/Non Linear Equations/Regula-Falsi/: regula_falsi.hpp
Special-Functions/: bessel.cpp  bessel.hpp  elliptic.cpp  elliptic.hpp  gamma.cpp  gamma.hpp  zeta.cpp  zeta.hpp
(+3 files in other folders)
